--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
 <html>
-<head><!-- 裏設定エリアの開始 -->
-    <meta charset="utf-8"><!-- 文字化け防止 -->
-</head><!-- 裏設定エリアの終了 -->
- 
-<body><!-- 画面に表示されるエリアの開始 -->
-    Hello World！
-</body><!-- 画面に表示されるエリアの終了 -->
+  <head>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.js"></script>
+    <script src="sketch.js"></script>
+  </head>
+  <body>
+    <main>
+    </main>
+      あああ
+  </body>
 </html>
+
