--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
 <script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.js"></script>
-<script src="js/sketch.js"></script>
+<script src="sketch.js"></script>
 </head>
 <body>
  
