--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <script src="sketch.js"></script>
 </head>
 <body>
- <a href="https://openprocessing.org/sketch/1745211"> <img src="0.png" alt="テキスト"></a>
+ <a href="https://openprocessing.org/sketch/1745211"> <img src="guitar_top.png" alt="Water guitar"></a>
+ <a href="https://openprocessing.org/sketch/1745211"> <img src="city_top.png" alt="City"></a>
 </body>
 </html>
