--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <script src="sketch.js"></script>
 </head>
 <body>
-    <a href="https://openprocessing.org/sketch/1745211"> <img src="city_top.png" alt="City"></a>
-    <a href="https://openprocessing.org/sketch/1745211"> <img src="guitar_top.png" alt="Water guitar"></a>
-    <a href="https://openprocessing.org/sketch/1745211"> <img src="top3.png" alt="City"></a>
-    <a href="https://openprocessing.org/sketch/1745211"> <img src="top4.png" alt="City"></a>
-    <a href="https://openprocessing.org/sketch/1745211"> <img src="top5.png" alt="City"></a>
-    <a href="https://openprocessing.org/sketch/1745211"> <img src="top6.png" alt="City"></a>
-    <a href="https://openprocessing.org/sketch/1745211"> <img src="top7.png" alt="City"></a>
-    <a href="https://openprocessing.org/sketch/1745211"> <img src="top8.png" alt="City"></a>
+    <a href="https://openprocessing.org/sketch/1745912"> <img src="city_top.png" alt="City" width="300"></a>
+    <a href="https://openprocessing.org/sketch/1745211"> <img src="guitar_top.png" alt="Water guitar" width="300"></a>
+    <a> <img src="top3.png" alt="City" width="300"></a>
+    <a href="https://openprocessing.org/sketch/1745211"> <img src="top4.png" alt="City" width="300"></a>
+    <a href="https://openprocessing.org/sketch/1745211"> <img src="top5.png" alt="City" width="300"></a>
+    <a href="https://openprocessing.org/sketch/1745211"> <img src="top6.png" alt="City" width="300"></a>
+    <a href="https://openprocessing.org/sketch/1745211"> <img src="top7.png" alt="City" width="300"></a>
+    <a href="https://openprocessing.org/sketch/1745211"> <img src="top8.png" alt="City" width="300"></a>
 </body>
 </html>
