--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <![endif]-->
 <script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.js"></script>
 <script src="sketch.js"></script>
+<style>
+    a{
+        text-align:center;
+    }
+</style>
 </head>
 <body>
     <a href="https://openprocessing.org/sketch/1745912"> <img src="city_top.png" alt="City" width="300"></a>
