--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.js"></script>
 <script src="sketch.js"></script>
 <style>
+    body{
+        background-color:black;
+        color:white;
+    }
     a{
         text-align:center;
     }
