--- a/index.html
+++ b/index.html
@@ -24,30 +24,32 @@
 </style>
 </head>
 <body>
-    <a href="https://openprocessing.org/sketch/1745912"> <img src="bar_title.jpg" alt="City"　height="230"></a>
-    <a href="https://openprocessing.org/sketch/1745912"> <img src="bar_category.jpg" alt="City"　height="230"></a>
-    <a href="https://openprocessing.org/sketch/1745912"> <img src="bar_play_or_not.jpg" alt="City"　height="230"></a>
+    <a> <img src="bar_title.jpg" alt="City"　height="230"></a>
+        <a> <img src="bar_category.jpg" alt="City"　height="230"></a>
+        <a> <img src="bar_play_or_not.jpg" alt="City"　height="230"></a>
     <a href="https://openprocessing.org/sketch/1745912"> <img src="city_top.png" alt="City" width="300"></a>
-    <a href="https://openprocessing.org/sketch/1745912"> <img src="bar_city.jpg" alt="City"　height="230"></a>
-    <a href="https://openprocessing.org/sketch/1745912"> <img src="bar_play.jpg" alt="City"　height="230"></a>
+        <a href="https://openprocessing.org/sketch/1745912"> <img src="bar_city.jpg" alt="City"　height="230"></a>
+        <a href="https://openprocessing.org/sketch/1745912"> <img src="bar_play.jpg" alt="City"　height="230"></a>
     <a href="https://openprocessing.org/sketch/1745211"> <img src="guitar_top.png" alt="Water guitar" width="300"></a>
-    <a href="https://openprocessing.org/sketch/1745912"> <img src="bar_water.jpg" alt="City"　height="230"></a>
-    <a href="https://openprocessing.org/sketch/1745912"> <img src="bar_play.jpg" alt="City"　height="230"></a>
+        <a href="https://openprocessing.org/sketch/1745211"> <img src="bar_water.jpg" alt="City"　height="230"></a>
+        <a href="https://openprocessing.org/sketch/1745211"> <img src="bar_play.jpg" alt="City"　height="230"></a>
     <a> <img src="top3.png" alt="City" width="300"></a>
-    <a href="https://openprocessing.org/sketch/1745211"> <img src="top4.png" alt="City" width="300"></a>
-        <a href="https://openprocessing.org/sketch/1745912"> <img src="bar_city.jpg" alt="City"　height="230"></a>
-        <a href="https://openprocessing.org/sketch/1745912"> <img src="bar_menten.jpg" alt="City"　height="230"></a>
-    <a href="https://openprocessing.org/sketch/1745211"> <img src="top5.png" alt="City" width="300"></a>
-        <a href="https://openprocessing.org/sketch/1745912"> <img src="bar_city.jpg" alt="City"　height="230"></a>
-        <a href="https://openprocessing.org/sketch/1745912"> <img src="bar_menten.jpg" alt="City"　height="230"></a>
-    <a href="https://openprocessing.org/sketch/1745211"> <img src="top6.png" alt="City" width="300"></a>
-        <a href="https://openprocessing.org/sketch/1745912"> <img src="bar_city.jpg" alt="City"　height="230"></a>
-        <a href="https://openprocessing.org/sketch/1745912"> <img src="bar_menten.jpg" alt="City"　height="230"></a>
-    <a href="https://openprocessing.org/sketch/1745211"> <img src="top7.png" alt="City" width="300"></a>
-        <a href="https://openprocessing.org/sketch/1745912"> <img src="bar_city.jpg" alt="City"　height="230"></a>
-        <a href="https://openprocessing.org/sketch/1745912"> <img src="bar_menten.jpg" alt="City"　height="230"></a>
-    <a href="https://openprocessing.org/sketch/1745211"> <img src="top8.png" alt="City" width="300"></a>
-        <a href="https://openprocessing.org/sketch/1745912"> <img src="bar_city.jpg" alt="City"　height="230"></a>
-        <a href="https://openprocessing.org/sketch/1745912"> <img src="bar_menten.jpg" alt="City"　height="230"></a>
+        <a> <img src="bar_city.jpg" alt="City"　height="230"></a>
+        <a> <img src="bar_mainten.jpg" alt="City"　height="230"></a>
+    <a> <img src="top4.png" alt="City" width="300"></a>
+        <a> <img src="bar_city.jpg" alt="City"　height="230"></a>
+        <a> <img src="bar_mainten.jpg" alt="City"　height="230"></a>
+    <a> <img src="top5.png" alt="City" width="300"></a>
+        <a> <img src="bar_city.jpg" alt="City"　height="230"></a>
+        <a> <img src="bar_mainten.jpg" alt="City"　height="230"></a>
+    <a> <img src="top6.png" alt="City" width="300"></a>
+        <a> <img src="bar_city.jpg" alt="City"　height="230"></a>
+        <a> <img src="bar_mainten.jpg" alt="City"　height="230"></a>
+    <a> <img src="top7.png" alt="City" width="300"></a>
+        <a> <img src="bar_city.jpg" alt="City"　height="230"></a>
+        <a> <img src="bar_mainten.jpg" alt="City"　height="230"></a>
+    <a> <img src="top8.png" alt="City" width="300"></a>
+        <a> <img src="bar_city.jpg" alt="City"　height="230"></a>
+        <a> <img src="bar_mainten.jpg" alt="City"　height="230"></a>
 </body>
 </html>
